# camel-handler

./: .gitignore  README.md  requirements.txt  setup.cfg
camel_handler/: __init__.py
camel_handler/src/: parser.py
tests/: README.md  test-analyse.py
