[metadata]
# replace with your username:
name = camel_handler
version = 1.0.0
author = Alexandros Raikos
author_email = alexandros@araikos.gr
description = A Python module which handles CAMEL modeling configuration recommendations.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6